...
        android:layout_width="match_parent"
        android:id="@+id/friendsListSwipeLayout">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/friendsListListView"
            android:layout_gravity="center"
            android:choiceMode="singleChoice"
            tools:listitem="@android:layout/simple_list_item_1" />

        <!--cool experiment -->
        <!--<android.support.v7.widget.RecyclerView-->
...
