...
            android:src="@drawable/photo_unavailable"/>
        <TextView
            android:layout_width="217dp"
            android:layout_height="75dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/tileViewItemName"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="150dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
...
